--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-
+    <link rel="shortcut icon" href="./assets/img/icons8-question-64.png" type="image/x-icon">
     <title>Guess the right number</title>
 </head>
 <body class="pg">
@@ -29,11 +29,20 @@
         <main class="contentCard__numBox" id="numBox">
 
             <!--Here will be displayed the match result-->
-            <h2 class="numBox__title" id="resultText">teste</h2>
+            <h2 class="numBox__title hide" id="resultText">teste</h2>
 
             <div class="numBox__nums">
                 <!--All these 'div's are the led digits, and inside of each them there are the led segments, that in CSS and JS will show or not on the screen-->
                 <div class="digit">
+                    <div class="segment on"></div>
+                    <div class="segment on"></div>
+                    <div class="segment on"></div>
+                    <div class="segment on"></div>
+                    <div class="segment on"></div>
+                    <div class="segment on"></div>
+                    <div class="segment"></div>
+                </div>
+                <div class="digit hide">
                     <div class="segment"></div>
                     <div class="segment"></div>
                     <div class="segment"></div>
@@ -42,7 +51,7 @@
                     <div class="segment"></div>
                     <div class="segment"></div>
                 </div>
-                <div class="digit">
+                <div class="digit hide">
                     <div class="segment"></div>
                     <div class="segment"></div>
                     <div class="segment"></div>
@@ -51,15 +60,9 @@
                     <div class="segment"></div>
                     <div class="segment"></div>
                 </div>
-                <div class="digit">
-                    <div class="segment"></div>
-                    <div class="segment"></div>
-                    <div class="segment"></div>
-                    <div class="segment"></div>
-                    <div class="segment"></div>
-                    <div class="segment"></div>
-                    <div class="segment"></div>
-                </div>
+            </div>
+            <div class="replayBttnContainer " id="replayBttnBox">
+                <button type="button" id="replayButton"><span>↻</span> Nova Partida</button>
             </div>
         </main>
         
@@ -68,9 +71,6 @@
             <div class="guessInputContainer" id="guessInputBox">
                 <input type="text" placeholder="digite o palpite">
                 <button type="button" id="guessButton">Enviar</button>
-            </div>
-            <div class="replayBttnContainer hide" id="replayBttnBox">
-                <button type="button" id="replayButton"><span>↻</span> Nova Partida</button>
             </div>
         </footer>
     </div>
