--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <main class="contentCard__numBox" id="numBox">
 
             <!--Here will be displayed the match result-->
-            <h2 class="numBox__title hide" id="resultText">teste</h2>
+            <h2 class="numBox__title hide" id="resultText"></h2>
 
             <div class="numBox__nums">
                 <!--All these 'div's are the led digits, and inside of each them there are the led segments, that in CSS and JS will show or not on the screen-->
@@ -61,15 +61,14 @@
                     <div class="segment"></div>
                 </div>
             </div>
-            <div class="replayBttnContainer " id="replayBttnBox">
+            <div class="replayBttnContainer hide" id="replayBttnBox">
                 <button type="button" id="replayButton"><span>↻</span> Nova Partida</button>
             </div>
         </main>
         
-        <!--Here on the footer of the card I will create a switch using DOM manipulation to set wich container show when the game is happenig and when it ends.-->
         <footer class="contentCard__foot">
             <div class="guessInputContainer" id="guessInputBox">
-                <input type="text" placeholder="digite o palpite">
+                <input id="guessInput" type="text" placeholder="digite o palpite">
                 <button type="button" id="guessButton">Enviar</button>
             </div>
         </footer>
